# multimodel-knowledge-agent

./: LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  security.yml
docs/: mkdocs.yml
docs/docs/: index.md
multimodel/: __init__.py  chatbot.py  dataset.py  embedding_openAI.py  features.py  fetch_abstract.py  llm_openAI.py  plots.py
multimodel/modeling/: predict.py  train.py
multimodel/templates/: summarization.py  summarization_templates.json
multimodel_knowledge_agent/: __init__.py  dataset.py  features.py  plots.py
multimodel_knowledge_agent/modeling/: train.py
references/: Makefile
test/: test_data.py
