[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multimodel_knowledge_agent1"
version = "0.0.1"
description = "Multimodal Personal Knowledge Base Agent (PKBA) that supports text and image inputs, and performs Q\u0026A, summarization, and image analysis"
authors = [
  { name = "Kunal.tembhare" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "==3.13.5"


[tool.ruff]
line-length = 99
src = ["multimodel_knowledge_agent1"]
include = ["pyproject.toml", "multimodel_knowledge_agent1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["multimodel_knowledge_agent1"]
force-sort-within-sections = true

